# trex-runner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  game.c  game.h  globals.h  main.c  spritesheet.c  spritesheet.h
actors/: clouds.c  clouds.h  horizon.c  horizon.h  horizon_line.c  t_rex.c
assets/: spritesheet.h  spritesheet.json
game/: horizon_line.c  horizon_line.h  t_rex.c  t_rex.h
objects/: clouds.c  clouds.h  distance_meter.c  distance_meter.h  game_over_panel.c  game_over_panel.h  horizon.c  horizon.h  horizon_line.c  horizon_line.h  obstacle.c  obstacle.h  t_rex.c  t_rex.h
sdl/: graphics.c  graphics.h  input.c  input.h  sounds.c  sounds.h  window.c  window.h
src/: main.cpp
src/core/: audio.cpp  audio.h  entity.cpp  entity.h  events.cpp  events.h  game.cpp  game.h  image.cpp  image.h  keyboard.cpp  keyboard.h  random.h  resource_manager.cpp  resource_manager.h  sprite.h  sprite_animated.cpp  sprite_animated.h  spritesheet.cpp  spritesheet.h  stage.h  timer.h  types.h  window.cpp  window.h
src/game/: main_stage.cpp  main_stage.h  shared.h
src/game/entities/: clouds.cpp  clouds.h  horizon.cpp  horizon.h  obstacles.cpp  obstacles.h  restart.cpp  restart.h  score.cpp  score.h  trex.cpp  trex.h
sys/: graphics.c  graphics.h  input.c  input.h  sounds.c  sounds.h  utilities.c  utilities.h  window.c  window.h
